# bike_computer_esp32

./: .clang-format  CMakeLists.txt  HOWTO.md  README.md  TODO.md  partitions.csv  sdkconfig  sdkconfig.old
components/FIT/: CMakeLists.txt  config_backup.csv  fit.c  fit.h  fit_config.h  fit_convert.c  fit_convert.h  fit_crc.c  fit_crc.h  fit_example.c  fit_example.h  fit_include.h  fit_product.c  fit_product.h  fit_ram.c  fit_ram.h
components/FIT/c/: CMakeLists.txt  fit.c  fit.h  fit_config.h  fit_convert.c  fit_convert.h  fit_crc.c  fit_crc.h  fit_example.c  fit_example.h  fit_include.h  fit_product.c  fit_product.h  fit_ram.c  fit_ram.h
components/FIT/c/examples/: example_intervals.fit  examples.sln
components/FIT/c/examples/decode/: decode.c  decode.vcxproj
components/FIT/c/examples/encode/: encode.c  encode.cpp  encode.vcxproj  encode.vcxproj.filters  example_activity.fit
components/FIT/examples/: example_intervals.csv
components/FIT/examples/decode/: decode.vcxproj.filters
components/FIT/examples/encode/: a.out  example_activity.fit
components/FIT/msg_defs_backup/: config.csv  fit_example.c  fit_example.h
components/common/: CMakeLists.txt  abstract_task.cpp  abstract_task.h  font19.c  font24.c  font31.c  font42.c  font48.c  font56.c  font72.c  font83.c  fonts.h  paint.cpp  paint.h  sensor_data.h
components/display/sharp_mem_lcd_2in7/: CMakeLists.txt  display.cpp  display.h  driver.cpp  driver.h
components/display/waveshare2in9/: CMakeLists.txt  display.cpp  display.h  epd2in9.cpp  epd2in9.h  epd2in9_V2.cpp  epd2in9_V2.h  epdif.cpp  epdif.h  epdpaint.cpp  epdpaint.h
components/for_esp32/ble_wrap/: CMakeLists.txt  ble_service.cpp  ble_service.h  ble_wrapper.cpp  ble_wrapper.h  file_transfer_gatts.cpp  file_transfer_gatts.h  file_transfer_task.cpp  file_transfer_task.h  gatts.cpp  gatts.h
components/for_esp32/fs_wrap/: CMakeLists.txt  fs_wrapper.cpp  fs_wrapper.h
components/for_esp32/gpio_wrap/: CMakeLists.txt  gpio_wrapper.cpp  gpio_wrapper.h
components/for_esp32/i2c_wrap/: CMakeLists.txt  i2c_wrapper.h
components/for_esp32/uart_wrap/: CMakeLists.txt  uart_wrapper.cpp  uart_wrapper.h
components/gnss/NEO-7M-C/: CMakeLists.txt  gnss.cpp  gnss.h  nmea_parser.c  nmea_parser.h
components/i2c/for_esp32/: i2c_wrapper.cpp
components/keypad/: CMakeLists.txt  keypad.cpp  keypad.h
components/weather/SF-MPL3115A2/: CMakeLists.txt  registers.h  weather.cpp  weather.h
main/: CMakeLists.txt  activity_service.cpp  activity_service.h  application.cpp  application.h  bike_computer_esp32.c  event_dispatcher.cpp  event_dispatcher.h  fit_activity.cpp  fit_activity.h  fit_file.cpp  fit_file.h  health_service.cpp  health_service.h  hello.cpp  hello.h  i2c_scan.cpp  i2c_scan.h  layout_factory.cpp  layout_factory.h  listerers_interface.h  page_presenter.h  root_window.cpp  root_window.h  status_presenter.cpp  status_presenter.h  status_view.cpp  status_view.h  time_service.cpp  time_service.hpp
main/presenter/: TEMPLATE.cpp  TEMPLATE.h  TEMPLATE_presenter.cpp  TEMPLATE_presenter.h  activity_do_it_presenter.cpp  activity_do_it_presenter.h  activity_paused.cpp  activity_paused.h  activity_selected_presenter.cpp  activity_selected_presenter.h  activity_splash_presenter.cpp  activity_splash_presenter.h  activity_workouts_presenter.cpp  activity_workouts_presenter.h  page_presenter.h  running_1_presenter.cpp  running_1_presenter.h  running_2_presenter.cpp  running_2_presenter.h  select_activity_presenter.cpp  select_activity_presenter.h  stats_presenter.cpp  stats_presenter.h  stats_selected_presenter.cpp  stats_selected_presenter.h  stats_splash_presenter.cpp  stats_splash_presenter.h  status_presenter.cpp  status_presenter.h  synchronize.cpp  synchronize.h  test_presenter.cpp  test_presenter.h  v_list_presenter.cpp  v_list_presenter.h  welcome_presenter.cpp  welcome_presenter.h  workout_steps_presenter.cpp  workout_steps_presenter.h  workout_steps_splash.cpp  (+1 more)
main/view/: TEMPLATE_view.cpp  TEMPLATE_view_DEPERCATED.cpp  TEMPLATE_view_DEPERCATED.h  activity_do_it_view.cpp  activity_do_it_view.h  activity_selected_view.cpp  activity_selected_view.h  activity_splash_view.cpp  activity_splash_view.h  activity_workouts_view.cpp  activity_workouts_view.h  running_1_view.cpp  running_1_view.h  running_2_view.cpp  running_2_view.h  select_activity_view.cpp  select_activity_view.h  stats_selected_view.cpp  stats_selected_view.h  stats_splash_view.cpp  stats_splash_view.h  stats_view.cpp  stats_view.h  status_view.cpp  test_view.cpp  test_view.h  v_list_view.cpp  v_list_view.h  welcome_view.cpp  welcome_view.h
main/widgets/: v_list_widget.cpp  v_list_widget.h
